rename base widget name to MediaControl

--- a/MusicController/MusicController.csproj
+++ b/MusicController/MusicController.csproj
@@ -119,8 +119,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Widget1.xaml.cs">
-      <DependentUpon>Widget1.xaml</DependentUpon>
+    <Compile Include="MediaControl.xaml.cs">
+      <DependentUpon>MediaControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -144,7 +144,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Widget1.xaml">
+    <Page Include="MediaControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
